--- a/gladio/templates/base.html
+++ b/gladio/templates/base.html
@@ -28,14 +28,14 @@
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/index">Inicio</a></li>
-					<li><a href="/pacientes">Maestros</a></li>
+					<li><a href="/masters">Maestros</a></li>
 					<li><a href="/salas">Logistica</a></li>
 					<li><a href="#about">Compras</a></li>
 					<li><a href="#contact">Ventas</a></li>
-					<li><a href="#contact">T.P.V.</a></li>					
-					<li><a href="#contact">CRM</a></li>					
-					<li><a href="#contact">Contabilidad</a></li>					
-					<li><a href="#contact">Salir</a></li>					
+					<li><a href="#contact">T.P.V.</a></li>
+					<li><a href="#contact">CRM</a></li>
+					<li><a href="#contact">Contabilidad</a></li>
+					<li><a href="#contact">Salir</a></li>
 				</ul>
 			</div>
 		</div>
@@ -50,10 +50,10 @@
 		{% block content %} {% endblock %}
 	</div>
 <div id="footer" class="container-fluid" style="width:100%; height:200px;bottom:0; background-color:#eee;">
-<br/>	
+<br/>
 <p class="text-muted">Siga XXI</p>
-	
-</div>	
+
+</div>
 <!--- -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
