--- a/gladio/templates/pugio/home.html
+++ b/gladio/templates/pugio/home.html
@@ -7,20 +7,20 @@
 {% block content %}
 <row>
 	<div class="col-md-3">
-		<a href="#" class="btn btn-default btn-lg btn-block">Maestros</a>
+		<a href="/masters" class="btn btn-default btn-lg btn-block">Maestros</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Logistica</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Compras</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Ventas</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">T.P.V.</a>		
-		<a href="#" class="btn btn-default btn-lg btn-block">CRM</a>		
-		<a href="#" class="btn btn-default btn-lg btn-block">Conabilidad</a>		
-		<a href="#" class="btn btn-default btn-lg btn-block">Útiles</a>		
+		<a href="#" class="btn btn-default btn-lg btn-block">T.P.V.</a>
+		<a href="#" class="btn btn-default btn-lg btn-block">CRM</a>
+		<a href="#" class="btn btn-default btn-lg btn-block">Contabilidad</a>
+		<a href="#" class="btn btn-default btn-lg btn-block">Útiles</a>
 		<br /><br />
-		<a href="#" class="btn btn-danger btn-lg btn-block">Salir</a>		
+		<a href="#" class="btn btn-danger btn-lg btn-block">Salir</a>
 		<br /><br /><br />
     </div>
     <div class="col-md-9" >
-	    
+
     </div>
 </row>
 {% endblock %}
