--- a/gladio/templates/pugio/masters.html
+++ b/gladio/templates/pugio/masters.html
@@ -8,7 +8,7 @@
 <row>
 	<div class="col-md-4">
 		<a href="#" class="btn btn-default btn-lg btn-block">Paises</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">Provincias</a>
+		<a href="/provincia" class="btn btn-default btn-lg btn-block">Provincias</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Monedas</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Impuestos</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Formas de Pago</a>
