--- a/gladio/templates/pugio/masters.html
+++ b/gladio/templates/pugio/masters.html
@@ -10,7 +10,7 @@
 		<a href="#" class="btn btn-default btn-lg btn-block">Paises</a>
 		<a href="/provincia" class="btn btn-default btn-lg btn-block">Provincias</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Monedas</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">Impuestos</a>
+		<a href="/impuesto" class="btn btn-default btn-lg btn-block">Impuestos</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Formas de Pago</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Empresas</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Sucursal</a>
