--- a/gladio/templates/pugio/masters.html
+++ b/gladio/templates/pugio/masters.html
@@ -9,10 +9,11 @@
 	<div class="col-md-4">
 		<a href="#" class="btn btn-default btn-lg btn-block">Paises</a>
 		<a href="/provincia" class="btn btn-default btn-lg btn-block">Provincias</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">Monedas</a>
+		<a href="/poblacion" class="btn btn-default btn-lg btn-block">Población</a>
+		<a href="/moneda" class="btn btn-default btn-lg btn-block">Monedas</a>
 		<a href="/impuesto" class="btn btn-default btn-lg btn-block">Impuestos</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Formas de Pago</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">Empresas</a>
+		<a href="/empresa" class="btn btn-default btn-lg btn-block">Empresas</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Sucursal</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Almacenes</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Empleados</a>
