--- a/gladio/templates/pugio/masters.html
+++ b/gladio/templates/pugio/masters.html
@@ -14,7 +14,7 @@
 		<a href="/impuesto" class="btn btn-default btn-lg btn-block">Impuestos</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Formas de Pago</a>
 		<a href="/empresa" class="btn btn-default btn-lg btn-block">Empresas</a>
-		<a href="#" class="btn btn-default btn-lg btn-block">Sucursal</a>
+		<a href="/sucursal" class="btn btn-default btn-lg btn-block">Sucursal</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Almacenes</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Empleados</a>
 		<a href="#" class="btn btn-default btn-lg btn-block">Almacenes</a>
